[project]
name        = "Hava Durumu | @KekikAkademi"
version     = "1.0"
description = "@KekikAkademi'nin Hava Durumu Uygulaması"
readme      = "README.md"
authors     = [
    { name = "keyiflerolsun", email = "keyiflerolsun@gmail.com" }
]

requires-python = ">=3.11.8"
dependencies    = [
    "Kekik",
    "flet",
    "aiohttp"
]

[tool.flet]
org       = "com.KekikAkademi"
product   = "Hava Durumu | @KekikAkademi"
company   = "@KekikAkademi"
copyright = "Copyright (C) 2025 by @KekikAkademi"